--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
 	<groupId>com.podio</groupId>
 	<artifactId>api</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>api</name>
+	<version>0.0.2</version>
 	<url>http://maven.apache.org</url>
 	
 	<build>
