--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<name>api</name>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	
 	<build>
