--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<name>api</name>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<url>http://podio.com</url>
 
 	<build>
@@ -27,6 +27,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<licenses>
+		<license>
+			<name>MIT</name>
+			<url>http://creativecommons.org/licenses/MIT/</url>
+		</license>
+	</licenses>
 	<repositories>
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
