--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
 	<name>api</name>
-	<version>0.5.0-SNAPSHOT</version>
+	<version>0.5.0</version>
 	<description>The official Java wrapper for the Podio API</description>
 	<url>http://podio.com</url>
 
@@ -142,9 +142,10 @@
 		<dependency>
 			<groupId>org.joda</groupId>
 			<artifactId>joda-money</artifactId>
-			<version>0.5-SNAPSHOT</version>
+			<version>[0.4,)</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
