--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 	<packaging>jar</packaging>
 
 	<name>api</name>
-	<version>0.5.0</version>
+	<version>0.5.0-SNAPSHOT</version>
 	<description>The official Java wrapper for the Podio API</description>
 	<url>http://podio.com</url>
 
 	<scm>
-		<connection>scm:git:git@github.com:podio/java.git</connection>
-		<developerConnection>scm:git:git@github.com:podio/java.git</developerConnection>
-		<url>git@github.com:podio/java.git</url>
+		<connection>scm:git:git@github.com:podio/podio-java.git</connection>
+		<developerConnection>scm:git:git@github.com:podio/podio-java.git</developerConnection>
+		<url>git@github.com:podio/podio-java.git</url>
 	</scm>
 	<build>
 		<plugins>
