--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
 	<name>api</name>
-	<version>0.7.1</version>
+	<version>0.7.2-SNAPSHOT</version>
 	<description>The official Java wrapper for the Podio API</description>
 	<url>http://podio.com</url>
 
