--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-plugin</artifactId>
+		        <version>2.12.4</version>
+		        <configuration>
+		          <skipTests>true</skipTests>
+		        </configuration>
+		      </plugin>
 		</plugins>
 	</build>
 	<ciManagement>
